<?xml version="1.0"?>
<package format="2">
  <name>cam_lidar_cluster_data_project</name>
  <version>1.12.0</version>
  <description>Contains the launch files for Autoware's rosbag demo.</description>

  <maintainer email="autoware@todo.todo">autoware</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>

  <depend>grid_map_cv</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>jsk_rviz_plugins</depend>
  <depend>vector_map_server</depend>

</package>
